Restructuring checkpoint 1: javalin, channel selection, dagger and skyline extractor